--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -160,63 +160,63 @@
                                 <p class="card-title" style="width: 50px;">Lab 1</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= PreIntroductionScore %>%; " class="TeacherBarValue">
-                                        <%= PreIntroductionScore %>
+                                        <%= PreIntroductionScore/PreIntroductionCount %>
                                     </div>
                                 </div>
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 2</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= StringScore %>%; " class="TeacherBarValue">
-                                        <%= StringScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PreStringScore %>%; " class="TeacherBarValue">
+                                        <%= PreStringScore/PreStringCount %>
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 3</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= DatatypeScore %>%; " class="TeacherBarValue">
-                                        <%= DatatypeScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PreDatatypeScore %>%; " class="TeacherBarValue">
+                                        <%= PreDatatypeScore/PreDatatypeCount %>
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 4</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= OperatorsScore %>%; " class="TeacherBarValue">
-                                        <%= OperatorsScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PreOperatorsScore %>%; " class="TeacherBarValue">
+                                        <%= PreOperatorsScore/PreOperatorsCount %>
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 5</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= FlowControlScore %>%; " class="TeacherBarValue">
-                                        <%= FlowControlScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PreFlowControlScore %>%; " class="TeacherBarValue">
+                                        <%= PreFlowControlScore/PreFlowControlCount %>
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 6</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PointersScore %>%; " class="TeacherBarValue">
-                                        <%= PointersScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PrePointersScore %>%; " class="TeacherBarValue">
+                                        <%= PrePointersScore/PrePointersCount %>
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 7</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= FunctionScore %>%; " class="TeacherBarValue">
-                                        <%= FunctionScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PreFunctionScore %>%; " class="TeacherBarValue">
+                                        <%= PreFunctionScore/PreFunctionCount %>
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 8</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= StructureScore %>%; " class="TeacherBarValue">
-                                        <%= StructureScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= PreStructureScore %>%; " class="TeacherBarValue">
+                                        <%= PreStructureScore/PreStructureCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -229,8 +229,8 @@
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 1</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreIntroductionScore %>%; " class="TeacherBarValue">
-                                        <%= PreIntroductionScore %>
+                                    <div style="background-color: #66B7BD; --w :<%= IntroductionScore %>%; " class="TeacherBarValue">
+                                        <%= IntroductionScore/IntroductionCount %>
                                     </div>
                                 </div>
                             </div>
@@ -238,7 +238,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 2</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= StringScore %>%; " class="TeacherBarValue">
-                                        <%= StringScore %>
+                                        <%= StringScore/StringCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -246,7 +246,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 3</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= DatatypeScore %>%; " class="TeacherBarValue">
-                                        <%= DatatypeScore %>
+                                        <%= DatatypeScore/DatatypeCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -254,7 +254,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 4</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= OperatorsScore %>%; " class="TeacherBarValue">
-                                        <%= OperatorsScore %>
+                                        <%= OperatorsScore/OperatorsCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -262,7 +262,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 5</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= FlowControlScore %>%; " class="TeacherBarValue">
-                                        <%= FlowControlScore %>
+                                        <%= FlowControlScore/FlowControlCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -270,7 +270,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 6</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= PointersScore %>%; " class="TeacherBarValue">
-                                        <%= PointersScore %>
+                                        <%= PointersScore/PointersCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -278,7 +278,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 7</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= FunctionScore %>%; " class="TeacherBarValue">
-                                        <%= FunctionScore %>
+                                        <%= FunctionScore/FunctionCount %>
                                     </div>
                                 </div>                    
                             </div>
@@ -286,7 +286,7 @@
                                 <p class="card-title" style="width: 50px;">Lab 8</p>
                                 <div class="TeacherBar">
                                     <div style="background-color: #66B7BD; --w :<%= StructureScore %>%; " class="TeacherBarValue">
-                                        <%= StructureScore %>
+                                        <%= StructureScore/StructureCount %>
                                     </div>
                                 </div>                    
                             </div>
