--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -159,64 +159,64 @@
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 1</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreIntroductionScore %>%; " class="TeacherBarValue">
-                                        <%= PreIntroductionScore/PreIntroductionCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreIntroductionScore/PreIntroductionCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreIntroductionScore/PreIntroductionCount %>/40
                                     </div>
                                 </div>
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 2</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreStringScore %>%; " class="TeacherBarValue">
-                                        <%= PreStringScore/PreStringCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreStringScore/PreStringCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreStringScore/PreStringCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 3</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreDatatypeScore %>%; " class="TeacherBarValue">
-                                        <%= PreDatatypeScore/PreDatatypeCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreDatatypeScore/PreDatatypeCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreDatatypeScore/PreDatatypeCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 4</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreOperatorsScore %>%; " class="TeacherBarValue">
-                                        <%= PreOperatorsScore/PreOperatorsCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreOperatorsScore/PreOperatorsCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreOperatorsScore/PreOperatorsCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 5</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreFlowControlScore %>%; " class="TeacherBarValue">
-                                        <%= PreFlowControlScore/PreFlowControlCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreFlowControlScore/PreFlowControlCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreFlowControlScore/PreFlowControlCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 6</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PrePointersScore %>%; " class="TeacherBarValue">
-                                        <%= PrePointersScore/PrePointersCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PrePointersScore/PrePointersCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PrePointersScore/PrePointersCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 7</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreFunctionScore %>%; " class="TeacherBarValue">
-                                        <%= PreFunctionScore/PreFunctionCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreFunctionScore/PreFunctionCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreFunctionScore/PreFunctionCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 8</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PreStructureScore %>%; " class="TeacherBarValue">
-                                        <%= PreStructureScore/PreStructureCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PreStructureScore/PreStructureCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PreStructureScore/PreStructureCount %>/40
                                     </div>
                                 </div>                    
                             </div>
@@ -229,64 +229,64 @@
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 1</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= IntroductionScore %>%; " class="TeacherBarValue">
-                                        <%= IntroductionScore/IntroductionCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((IntroductionScore/IntroductionCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= IntroductionScore/IntroductionCount %>/40
                                     </div>
                                 </div>
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 2</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= StringScore %>%; " class="TeacherBarValue">
-                                        <%= StringScore/StringCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((StringScore/StringCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= StringScore/StringCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 3</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= DatatypeScore %>%; " class="TeacherBarValue">
-                                        <%= DatatypeScore/DatatypeCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((DatatypeScore/DatatypeCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= DatatypeScore/DatatypeCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 4</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= OperatorsScore %>%; " class="TeacherBarValue">
-                                        <%= OperatorsScore/OperatorsCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((OperatorsScore/OperatorsCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= OperatorsScore/OperatorsCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 5</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= FlowControlScore %>%; " class="TeacherBarValue">
-                                        <%= FlowControlScore/FlowControlCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((FlowControlScore/FlowControlCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= FlowControlScore/FlowControlCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 6</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= PointersScore %>%; " class="TeacherBarValue">
-                                        <%= PointersScore/PointersCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((PointersScore/PointersCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= PointersScore/PointersCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 7</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= FunctionScore %>%; " class="TeacherBarValue">
-                                        <%= FunctionScore/FunctionCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((FunctionScore/FunctionCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= FunctionScore/FunctionCount %>/40
                                     </div>
                                 </div>                    
                             </div>
                             <div  style="display: flex;">
                                 <p class="card-title" style="width: 50px;">Lab 8</p>
                                 <div class="TeacherBar">
-                                    <div style="background-color: #66B7BD; --w :<%= StructureScore %>%; " class="TeacherBarValue">
-                                        <%= StructureScore/StructureCount %>
+                                    <div style="background-color: #66B7BD; --w :<%= ((StructureScore/StructureCount)/40)*100 %>px; " class="TeacherBarValue">
+                                        <%= StructureScore/StructureCount %>/40
                                     </div>
                                 </div>                    
                             </div>
@@ -312,8 +312,8 @@
                         <div  style="display: flex;">
                             <p class="card-title" style="width: 50px;">Quiz 1</p>
                             <div class="TeacherBar">
-                                <div style="background-color: #bd7b67; --w :<%= TicTacToeScore %>%; " class="TeacherBarValue">
-                                    <%= TicTacToeScore %>
+                                <div style="background-color: #bd7b67; --w :<%= ((TicTacToeScore)) %>%; " class="TeacherBarValue">
+                                    <%= TicTacToeScore/TicTacToeCount %>
                                 </div>
                             </div>                    
                         </div>
@@ -321,7 +321,7 @@
                             <p class="card-title" style="width: 50px;">Quiz 2</p>
                             <div class="TeacherBar">
                                 <div style="background-color: #bd7b67; --w :<%= LibrarySystemScore %>%; " class="TeacherBarValue">
-                                    <%= LibrarySystemScore %>
+                                    <%= LibrarySystemScore/LibrarySystemCount %>
                                 </div>
                             </div>                    
                         </div>
@@ -329,7 +329,7 @@
                             <p class="card-title" style="width: 50px;">Quiz 3</p>
                             <div class="TeacherBar">
                                 <div style="background-color: #bd7b67; --w :<%= RoshamboScore %>%; " class="TeacherBarValue">
-                                    <%= RoshamboScore %>
+                                    <%= RoshamboScore/RoshamboCount %>
                                 </div>
                             </div>                    
                         </div>
