--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -529,7 +529,7 @@
         </div>
     </div>
 
-    <%- include('index-ai') %>
+    <%- include('../index/index_ai') %>
 
     <!-- Recommendation -->
     <div class="modal fade" id="RecommendSetting" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -607,7 +607,7 @@
 </div>
 
    <script src="/public/javascripts/chart.js"></script>
-   <script src="/server.js"></script>
+   <script src="server.js"></script>
 
 
 
