--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -9,7 +9,7 @@
     .status {
         width: 70px;
         height: 25px;
-        background-color: #77bd66;
+        background-color: #a6f07f;
         margin-right: 5px;
         text-align: center;
     }
