--- a/views/index/index_ai.ejs
+++ b/views/index/index_ai.ejs
@@ -100,7 +100,7 @@
 <body>
   <!-- Chat container -->
   <div id="chat-container">
-    <h1>Coding Money Chatbot</h1>
+    <h1>Chatbot</h1>
     <div id="chat-history"></div>
     <form id="chat-form">
       <input type="text" id="user-input" placeholder="Enter your message">
