--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -187,8 +187,13 @@ progress[value]::-webkit-progress-bar {
 
 .TeacherBar {
   width: 100px; 
+  height: auto; 
+  margin-left: 20px;
+}
+.TeacherBarr {
+  width: 100px; 
   height: 20px; 
-  background-color: #f7f7f7;
+  background-color: #fff;
   margin-top: 3px;
 }
 .TeacherBarValue {
